# gitid

./: .clang-format  .gitignore  Makefile  Makefile.am  README.md  configure.ac
.circleci/: config.yml
debian/: README.Debian  README.source  changelog  control  copyright  gitid.1  gitid.cron.d.ex  gitid.default.ex  gitid.doc-base.EX  gitid.manpages  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
debian/docs/: gitid.1
debian/source/: options
include/: algorithm.h  cli.h  git-clone-opts.h  git-clone.h  git-user.h  git.h  gitid-id.h  gitid.h  limits.h  struct.h  util.h  vector-gitid-id.h
lib/C-STL/include/cstl/: algorithm.h  cstring.h  memory.h  string.h  vector.h
lib/C-STL/src/: cstring.c  memory.c  string.c
lib/c-stl/include/: algorithm.h  vector.h
scripts/: autoclean.sh  autogen.sh  lint.sh
src/: cli.c  git-clone-opts.c  git-clone.c  git-user.c  git.c  gitid-id.c  gitid-notes  gitid.c  memory.c  util.c  vector-gitid-id.c
test/: Makefile
test/data/: double_gitid_id_1  single_gitid_id_1  single_gitid_id_2
test/src/: test.c
